fix: dark mode background selector

--- a/assets/css/var.scss
+++ b/assets/css/var.scss
@@ -127,7 +127,7 @@
   --dark-bbs: hsl(205, 54%, 14%);
 
   // Dark background
-  #app {
+  #body {
     background-image: url(@/assets/img/navbar/background/0.png) !important;
   }
 
